<resources>
    <string name="app_name">Sleeping Beauty</string>
    <string name="permission_denied_explanation">To make this application work correctly, we need those permissions</string>
    <string name="permission_denied_dialog_title">Dude, don\'t do this</string>
    <string name="retry_text">Retry</string>
    <string name="permission_blocked_dialog_title">Why you\'re doing this to me?</string>
    <string name="permission_blocked_explanation">Since you\'re incapable of accept all permissions even when we asked you to ACCEPT IT, NOW YOU HAVE TO ENTER THE APPLICATION SETTINGS TO MAKE THIS SHIT WORK, BITCH</string>
    <string name="settings_text">Settings</string>
    <string name="application_settings_text">Application Settings</string>
    <string name="current_location_action_text">Set Current Location as Home</string>
    <string name="write_settings_dialog_title">We need a very dangerous permission</string>
    <string name="write_settings_permission_explanation">We also need a additional permission that requires you to sell your soul to the devil so this app can work, please accept it or uninstall the app, thanks.</string>
    <string name="starting_sleep_time">Starting sleep time:</string>
    <string name="ending_sleep_time">Ending sleep time:</string>
    <string name="edit">Edit</string>
</resources>
